@@ -97,6 +97,10 @@ TD(TOK_QUAD_TS       , TC_SYMBOL    , TV_SYM  , ID_QUAD_TS      )
 TD(TOK_QUAD_TZ       , TC_SYMBOL    , TV_SYM  , ID_QUAD_TZ      )
 TD(TOK_QUAD_UL       , TC_SYMBOL    , TV_SYM  , ID_QUAD_UL      )
 TD(TOK_QUAD_WA       , TC_SYMBOL    , TV_SYM  , ID_QUAD_WA      )
+TD(TOK_ALPHA         , TC_SYMBOL    , TV_SYM  , ID_ALPHA        )
+TD(TOK_ALPHA_U       , TC_SYMBOL    , TV_SYM  , ID_ALPHA_U      )
+TD(TOK_OMEGA         , TC_SYMBOL    , TV_SYM  , ID_OMEGA        )
+TD(TOK_OMEGA_U       , TC_SYMBOL    , TV_SYM  , ID_OMEGA_U      )
 
 TD(TOK_F0_ZILDE      , TC_FUN0      , TV_FUN  , ID_F0_ZILDE     )
 TD(TOK_F1_EXECUTE    , TC_FUN1      , TV_FUN  , ID_F1_EXECUTE   )
