@@ -1,0 +1,251 @@
+keycode   8 =
+keycode   9 = Escape
+keycode  10 = 1            exclam      U00A8      U2336
+keycode  11 = 2            at          U00AF      U236B
+keycode  12 = 3            numbersign  less       U2352
+keycode  13 = 4            dollar      U2264      U234B
+keycode  14 = 5            percent     equal      U233D
+keycode  15 = 6            asciicircum U2265      U2349
+keycode  16 = 7            ampersand   greater    U2296
+keycode  17 = 8            asterisk    U2260      U235F
+keycode  18 = 9            parenleft   U2228      U2371
+keycode  19 = 0            parenright  U2227      U2372
+keycode  20 = minus        underscore  U00D7      exclam
+keycode  21 = equal        plus        U00F7      U2339
+keycode  22 = BackSpace
+keycode  23 = Tab          ISO_Left_Tab
+keycode  24 = q            Q           question 
+keycode  25 = w            W           U2375      U2379
+keycode  26 = e            E           U2208      U22F8
+keycode  27 = r            R           U2374
+keycode  28 = t            T           U223C      U2368
+keycode  29 = y            Y           U2191      U00A5
+keycode  30 = u            U           U2193
+keycode  31 = i            I           U2373      U2378
+keycode  32 = o            O           U25CB      U2365
+keycode  33 = p            P           U22C6      U2363
+keycode  34 = bracketleft  braceleft   U2190      U235E
+keycode  35 = bracketright braceright  U2192      U236C
+keycode  36 = Return
+keycode  37 = Control_L
+keycode  38 = a            A           U237A      U2376
+keycode  39 = s            S           U2308
+keycode  40 = d            D           U230A
+keycode  41 = f            F           underscore
+keycode  42 = g            G           U2207
+keycode  43 = h            H           U2206
+keycode  44 = j            J           U2218      U2364
+keycode  45 = k            K           apostrophe
+keycode  46 = l            L           U2395      U2337
+keycode  47 = semicolon    colon       U234E      U2261
+keycode  48 = apostrophe   quotedbl    U2355      U2262
+keycode  49 = grave        asciitilde  U25CA
+keycode  50 = Shift_L
+keycode  51 = backslash    bar         U22A2      U22A3
+keycode  52 = z            Z           U2282
+keycode  53 = x            X           U2283
+keycode  54 = c            C           U2229      U00A2
+keycode  55 = v            V           U222A
+keycode  56 = b            B           U22A5      U00A3
+keycode  57 = n            N           U22A4
+keycode  58 = m            M           U2223
+keycode  59 = comma        less        U235D      U236A
+keycode  60 = period       greater     U2340      U2359
+keycode  61 = slash        question    U233F      U2360
+keycode  62 = Shift_R
+keycode  63 = KP_Multiply 
+keycode  64 = Mode_switch  Meta_L
+keycode  65 = space
+keycode  66 = Caps_Lock
+keycode  67 = F1
+keycode  68 = F2
+keycode  69 = F3
+keycode  70 = F4
+keycode  71 = F5
+keycode  72 = F6
+keycode  73 = F7
+keycode  74 = F8
+keycode  75 = F9
+keycode  76 = F1
+keycode  77 = Num_Lock Pointer_EnableKeys
+keycode  78 = Scroll_Lock
+keycode  79 = U00E4      U00C4    KP_Home    KP_7
+keycode  80 = U00F6      U00D6    KP_Up      KP_8
+keycode  81 = U00FC      U00DC    KP_Prior   KP_9
+keycode  82 = KP_Subtract
+keycode  83 = U00DF      U1E9E    KP_Left    KP_4
+keycode  84 = U20AC      U20AC    KP_Begin   KP_5
+keycode  85 = U00A7      U00A7    KP_Right   KP_6
+keycode  86 = KP_Add
+keycode  87 = U00A2      U00A2    KP_End    KP_1
+keycode  88 = U00A3      U00A3    KP_Down   KP_2
+keycode  89 = U00AB      U00BB    KP_Next   KP_3
+keycode  91 = KP_Delete KP_Decimal
+keycode  92 =
+keycode  93 = Mode_switch Mode_switch
+keycode  94 = less greater bar brokenbar bar brokenbar
+keycode  95 = F11
+keycode  96 = F12
+keycode  97 = Home
+keycode  98 = Up
+keycode  99 = Prior
+keycode 100 = Left
+keycode 101 =
+keycode 102 = Right
+keycode 103 = End
+
+keycode 104 = KP_Enter NoSymbol KP_Enter
+keycode 105 = Control_R NoSymbol Control_R
+keycode 106 = KP_Divide XF86_Ungrab KP_Divide XF86_Ungrab
+keycode 107 = Print Sys_Req Print Sys_Req
+keycode 108 = Mode_switch Meta_L
+keycode 109 = Linefeed NoSymbol Linefeed
+keycode 110 = Home NoSymbol Home
+keycode 111 = Up NoSymbol Up
+keycode 112 = Prior NoSymbol Prior
+keycode 113 = Left NoSymbol Left
+keycode 114 = Right NoSymbol Right
+keycode 115 = End NoSymbol End
+keycode 116 = Down NoSymbol Down
+keycode 117 = Next NoSymbol Next
+keycode 118 = Insert NoSymbol Insert
+keycode 119 = Delete NoSymbol Delete
+
+keycode 120 =
+keycode 121 =
+keycode 122 =
+keycode 123 =
+keycode 124 = ISO_Level3_Shift
+keycode 125 = NoSymbol Mode_switch
+keycode 126 = KP_Equal
+keycode 127 = NoSymbol Super_L
+keycode 128 = NoSymbol Hyper_L
+keycode 129 =
+keycode 130 =
+keycode 131 =
+keycode 132 =
+keycode 133 =  Mode_switch Meta_L
+keycode 134 =  Mode_switch Meta_L
+keycode 135 =
+keycode 136 =
+keycode 137 =
+keycode 138 =
+keycode 139 =
+keycode 140 =
+keycode 141 =
+keycode 142 =
+keycode 143 =
+keycode 144 =
+keycode 145 =
+keycode 146 =
+keycode 147 =
+keycode 148 =
+keycode 149 =
+keycode 150 =
+keycode 151 =
+keycode 152 =
+keycode 153 =
+keycode 154 =
+keycode 155 =
+keycode 156 = NoSymbol Meta_L
+keycode 157 =
+keycode 158 =
+keycode 159 =
+keycode 160 =
+keycode 161 =
+keycode 162 =
+keycode 163 =
+keycode 164 =
+keycode 165 =
+keycode 166 =
+keycode 167 =
+keycode 168 =
+keycode 169 =
+keycode 170 =
+keycode 171 =
+keycode 172 =
+keycode 173 =
+keycode 174 =
+keycode 175 =
+keycode 176 =
+keycode 177 =
+keycode 178 =
+keycode 179 =
+keycode 180 =
+keycode 181 =
+keycode 182 =
+keycode 183 =
+keycode 184 =
+keycode 185 =
+keycode 186 =
+keycode 187 =
+keycode 188 =
+keycode 189 =
+keycode 190 =
+keycode 191 =
+keycode 192 =
+keycode 193 =
+keycode 194 =
+keycode 195 =
+keycode 196 =
+keycode 197 =
+keycode 198 =
+keycode 199 =
+keycode 200 =
+keycode 201 =
+keycode 202 =
+keycode 203 =
+keycode 204 =
+keycode 205 =
+keycode 206 =
+keycode 207 =
+keycode 208 =
+keycode 209 =
+keycode 210 =
+keycode 211 =
+keycode 212 =
+keycode 213 =
+keycode 214 = 
+keycode 215 =
+keycode 216 =
+keycode 217 =
+keycode 218 =
+keycode 219 =
+keycode 220 =
+keycode 221 =
+keycode 222 =
+keycode 223 =
+keycode 224 =
+keycode 225 =
+keycode 226 =
+keycode 227 =
+keycode 228 =
+keycode 229 =
+keycode 230 =
+keycode 231 =
+keycode 232 =
+keycode 233 =
+keycode 234 =
+keycode 235 =
+keycode 236 =
+keycode 237 =
+keycode 238 =
+keycode 239 =
+keycode 240 =
+keycode 241 =
+keycode 242 =
+keycode 243 =
+keycode 244 =
+keycode 245 =
+keycode 246 =
+keycode 247 =
+keycode 248 =
+keycode 249 =
+keycode 250 =
+keycode 251 =
+keycode 252 =
+keycode 253 =
+keycode 254 =
+keycode 255 =
+
+clear lock
